// If we did not define the syntax, it would take the syntax as proto2 by default
syntax = "proto3";

// This is where the autogenerated java classes are gonna be stored
package com.academic.stub.course;

// With this line, I am saying that create multiple classes rather than a single class
option java_multiple_files = true;


// This is the request message
message AllCourseDataRequest {
  string name = 1;
}

// This is the response message
message AllCourseDataResponse {

  message Course {
    string courseNumber = 1;
    string studentName = 2;
    string advancedCourseNumber = 3;
    repeated string studentNumber = 4;
  }
  repeated Course courses = 1;
}

service StudentServer {
  rpc GetAllStudentData (AllStudentDataRequest) returns (AllStudentDataResponse) {}
}

service StudentRepository {
  rpc GetAllStudentData (AllStudentDataRequest) returns (AllStudentDataResponse) {}
}